[gd_scene load_steps=2 format=3 uid="uid://trackselect001"]

[ext_resource type="Script" path="res://scripts/TrackSelect.gd" id="1"]

[node name="TrackSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.02, 0.02, 0.08, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 60.0
grow_horizontal = 2
text = "SELECT TRACK"
horizontal_alignment = 1

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 80.0
offset_right = -20.0
offset_bottom = -80.0

[node name="TrackList" type="PanelContainer" parent="HSplitContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/TrackList"]
layout_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/TrackList/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="PreviewPanel" type="PanelContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TrackPreview" type="TextureRect" parent="HSplitContainer/PreviewPanel"]
layout_mode = 2
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 220.0
grow_horizontal = 2

[node name="TrackInfo" type="VBoxContainer" parent="HSplitContainer/PreviewPanel"]
layout_mode = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="TrackNameLabel" type="Label" parent="HSplitContainer/PreviewPanel/TrackInfo"]
layout_mode = 2
text = "Track Name"
horizontal_alignment = 1

[node name="TrackWorldLabel" type="Label" parent="HSplitContainer/PreviewPanel/TrackInfo"]
layout_mode = 2
text = "World Name"
horizontal_alignment = 1

[node name="DifficultyLabel" type="Label" parent="HSplitContainer/PreviewPanel/TrackInfo"]
layout_mode = 2
text = "Difficulty: ★★★☆☆"
horizontal_alignment = 1

[node name="BestTimeLabel" type="Label" parent="HSplitContainer/PreviewPanel/TrackInfo"]
layout_mode = 2
text = "Best: --:--.---"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="HSplitContainer/PreviewPanel"]
layout_mode = 2
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -60.0
offset_right = 75.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "START RACE"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = 120.0
offset_bottom = -20.0
grow_vertical = 0
text = "BACK"